// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CentralizedDialog Snapshot Tests matches snapshot in danger colorVariant 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper max-h-[calc(100vh-10rem)] MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl my-0 rounded-xl z-dialog max-w-full shadow-xl mx-auto css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <header
    class="p-8"
  >
    <div
      class="flex flex-col gap-8"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
          data-test="dialog-title"
        >
          Warning Title
        </div>
        <div
          class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
          data-test="body"
        >
          Warning Description
        </div>
      </div>
    </div>
  </header>
  <div
    class="flex flex-col-reverse flex-wrap justify-end gap-3 px-8 py-4 shadow-t md:flex-row"
  >
    <button
      class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
      data-test="centralized-cancel"
      tabindex="0"
      type="button"
    >
      Close
    </button>
    <button
      class=MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation button-danger min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
      data-test="centralized-confirm"
      tabindex="0"
      type="button"
    >
      Delete
    </button>
  </div>
</div>
`;

exports[`CentralizedDialog Snapshot Tests matches snapshot in info colorVariant 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper max-h-[calc(100vh-10rem)] MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl my-0 rounded-xl z-dialog max-w-full shadow-xl mx-auto css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <header
    class="p-8"
  >
    <div
      class="flex flex-col gap-8"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
          data-test="dialog-title"
        >
          Warning Title
        </div>
        <div
          class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
          data-test="body"
        >
          Warning Description
        </div>
      </div>
    </div>
  </header>
  <div
    class="flex flex-col-reverse flex-wrap justify-end gap-3 px-8 py-4 shadow-t md:flex-row"
  >
    <button
      class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
      data-test="centralized-cancel"
      tabindex="0"
      type="button"
    >
      Close
    </button>
    <button
      class=MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
      data-test="centralized-confirm"
      tabindex="0"
      type="button"
    >
      Confirm
    </button>
  </div>
</div>
`;

exports[`CentralizedDialog Snapshot Tests matches snapshot with basic props 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper max-h-[calc(100vh-10rem)] MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl my-0 rounded-xl z-dialog max-w-full shadow-xl mx-auto css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <header
    class="p-8"
  >
    <div
      class="flex flex-col gap-8"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
          data-test="dialog-title"
        >
          Warning Title
        </div>
        <div
          class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
          data-test="body"
        >
          Warning Description
        </div>
      </div>
    </div>
  </header>
  <div
    class="flex flex-col-reverse flex-wrap justify-end gap-3 px-8 py-4 shadow-t md:flex-row"
  >
    <button
      class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
      data-test="centralized-cancel"
      tabindex="0"
      type="button"
    >
      Close
    </button>
    <button
      class=MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
      data-test="centralized-confirm"
      tabindex="0"
      type="button"
    >
      Continue
    </button>
  </div>
</div>
`;

exports[`CentralizedDialog Snapshot Tests matches snapshot with disabled confirm button 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper max-h-[calc(100vh-10rem)] MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl my-0 rounded-xl z-dialog max-w-full shadow-xl mx-auto css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <header
    class="p-8"
  >
    <div
      class="flex flex-col gap-8"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
          data-test="dialog-title"
        >
          Warning Title
        </div>
        <div
          class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
          data-test="body"
        >
          Warning Description
        </div>
      </div>
    </div>
  </header>
  <div
    class="flex flex-col-reverse flex-wrap justify-end gap-3 px-8 py-4 shadow-t md:flex-row"
  >
    <button
      class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
      data-test="centralized-cancel"
      tabindex="0"
      type="button"
    >
      Close
    </button>
    <button
      class=MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
      data-test="centralized-confirm"
      disabled=""
      tabindex="-1"
      type="button"
    >
      Continue
    </button>
  </div>
</div>
`;
